--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,18 @@
-<view>
-  <view wx:for="{{list}}" wx:key="index" class="list-item">
-    <image src="{{item.src}}" class="list-img"></image>
-    <view class="list-main">
-      <view class="list-main-title">{{item.title}}</view>
-      <view class="list-main-detail">{{item.detail}}</view>
+<scroll-view bindscroll="scroll" bindscrolltolower="scrolltolower" scroll-y class="container">
+  <view>
+    <view wx:for="{{list}}" wx:key="index" id="{{item.id}}">
+      <view wx:if="item.data" class="list-item">
+        <image src="{{item.data.src}}" class="list-img"></image>
+        <view class="list-main">
+          <view class="list-main-title">{{item.data.title}}</view>
+          <view class="list-main-detail">{{item.data.detail}}</view>
+        </view>
+      </view>
+      <view wx:else style="height: {{item.height}};" class="list-item"></view>
+    </view>
+    <view class="weui-loadmore custom-loading">
+      <view class="weui-loading"></view>
+      <view class="weui-loadmore__tips">正在加载</view>
     </view>
   </view>
-  <view class="weui-loadmore custom-loading">
-    <view class="weui-loading"></view>
-    <view class="weui-loadmore__tips">正在加载</view>
-  </view>
-</view>
+</scroll-view>
