--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -2,7 +2,8 @@ page {
   height: 100%;
 }
 .container{
-  height: 100%;
+  /* height: 100%; */
+  overflow: scroll;
 }
 .list-item{
   display: flex;
